@@ -1,2 +1,13 @@
 # records-jsonb
 Some tests using JSONB with Records classes
+
+
+
+Yasson 1.0.7 solve this.
+```
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.eclipse.yasson.internal.ReflectionUtils (file:/Users/delabassee/.m2/repository/org/eclipse/yasson/1.0.6/yasson-1.0.6.jar) to constructor java.lang.Record()
+WARNING: Please consider reporting this to the maintainers of org.eclipse.yasson.internal.ReflectionUtils
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future releas
+```
